# Mainproject_DataHSH

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_REVIEW_가이드.md  Dockerfile  Dockerfile.embed  Final.md  LICENSE  PROJECT_SUMMARY.md  README.md  README_DOCKER.md  TODO.md  check_json.py  docker-compose.yml  gradio_demo.py  install_all_and_train.bat  install_and_train.bat  main.py  make_data_figures.py  make_data_performance.py  make_figures.py  pyproject.toml  pytest.ini  quick_setup.bat  requirements.txt  setup_and_train.bat  setup_cuda_and_train.bat  setup_cuda_simple.bat  start_docker.bat  start_docker.sh  start_training.bat  train_cuda.bat  train_fixed.bat  train_sample.py  visualize.py  visualize_training.py  visualize_tsne_umap.html
api/: embed_api.py  evaluation_metrics.py  main.py  search_api.py  search_pipeline.py  vector_index.py
checkpoints/: baseline_v5_best_model.pt  best_model.pt  checkpoint_epoch_13.pt  checkpoint_epoch_14.pt  checkpoint_epoch_15.pt  checkpoint_epoch_3.pt  checkpoint_epoch_4.pt  checkpoint_epoch_5.pt
checkpoints/seed_123/: best_model.pt  checkpoint_epoch_3.pt  checkpoint_epoch_4.pt  checkpoint_epoch_5.pt
checkpoints/seed_2024/: best_model.pt  checkpoint_epoch_3.pt  checkpoint_epoch_4.pt  checkpoint_epoch_5.pt
checkpoints/seed_42/: best_model.pt  checkpoint_epoch_3.pt  checkpoint_epoch_4.pt  checkpoint_epoch_5.pt
checkpoints/seed_456/: best_model.pt  checkpoint_epoch_3.pt  (+2 more)
data/: __init__.py  dataset_loader.py  fashion_dataset.py
docs/: CHANGELOG.md  CLEANUP_COMPLETE.md  CLOUDRUN_QUICKSTART.md  CODE_QUALITY_IMPROVEMENTS.md  DEPLOYMENT_COMPARISON.md  FREE_DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICK_SUMMARY.md  ROADMAP_OPTION_A.md  WEEK_PLAN.md  commercial_requirements.md  dashboard_design.md  deepfashion2_comparison.md  deployment_guide.md  domain_gap_solutions.md  multi_domain_training_guide.md
integration/: NEXTJS_INTEGRATION.md  README.md  SPRING_BOOT_INTEGRATION.md
ldg/: run_project.ipynb
logs/: events.out.tfevents.1770459918.DESKTOP-08OTGME.7452.0  events.out.tfevents.1770467778.DESKTOP-08OTGME.3360.0
models/: __init__.py  contrastive_learner.py  embedding_generator.py  json_encoder.py  multi_view_contrastive_loss.py
results/: KPI_간소화_요약.md  baseline_v2_vs_v3_comparison.json  baseline_v3_fashionclip_results.json  baseline_v3_final_report.md  baseline_v3_vs_v4_analysis.md  baseline_v4_finetuned_results.json  baseline_v5_augmented_results.json  baseline_v5_final_report.md  baseline_v5_seed_validation.json  baseline_v5_seed_validation_manual.json  kpi_summary.json  training_summary.json  v3_vs_v5_comparison.json  v5_seed_validation_report.md
scripts/: build_faiss_index.py  build_supabase_faiss_index.py  check_9oz_images.py  check_embeddings.py  cleanup_dummy_files.py  download_from_gcs.ps1  generate_naver_embeddings.py  generate_style_labels.py  main.py  save_embeddings_npy.py  start_api_server.py  test_multi_domain_pipeline.py  train.py  train_style_classifier.py  upload_embeddings_pg.py  visualize_embeddings.py  visualize_search_results.py
static/: search.html
tests/: conftest.py  test_data_processing.py  test_fashion_dataset.py  test_integration_demo.py  test_training.py
training/: __init__.py  trainer.py
utils/: __init__.py  config.py  supabase_loader.py  training_monitor.py  validators.py
(+51 files in other folders)
